Fix word break on messages

--- a/src/components/common/ChannelChat/ChatMessage/ChatMessage.module.scss
+++ b/src/components/common/ChannelChat/ChatMessage/ChatMessage.module.scss
@@ -1,7 +1,4 @@
 .root {
-  p {
-    word-break: break-all;
-  }
   padding: 8px 16px;
   position: relative;
 
